--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .thumbs.db
 node_modules
 
+# Visual Studio Code settings
+.vscode
+
 # Quasar core related directories
 .quasar
 /dist
@@ -31,3 +34,5 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+
+src/assets/
